remove npm run serve and keep container running

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: ./cvuser
     user: "node"
+    tty: true
     working_dir: /home/node/app
     environment:
       - NODE_ENV=development
@@ -11,6 +12,6 @@ services:
     ports:
     - "8080:8080"
     - "8000:8000"
-    command: sh -c "npm install && npm run serve"
+    command: sh -c "npm install && tail -F /dev/null"
 networks:
   net-test:
