--- a/curriculum-frontend/package.json
+++ b/curriculum-frontend/package.json
@@ -11,7 +11,15 @@
   },
   "dependencies": {
     "nuxt": "^3.13.0",
+    "sass": "^1.80.2",
+    "sass-loader": "^16.0.2",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@bootstrap-vue-next/nuxt": "^0.25.6",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.25.6",
+    "vue-grid-responsive": "^0.5.0"
   }
 }
