--- a/docker/8.3/php.ini
+++ b/docker/8.3/php.ini
@@ -3,3 +3,12 @@ post_max_size = 100M
 upload_max_filesize = 100M
 variables_order = EGPCS
 pcov.directory = .
+[XDebug]
+;zend_extension = xdebug.so
+;xdebug.mode=debug
+;;xdebug.discover_client_host=false
+;xdebug.client_host=host.docker.internal
+;xdebug.client_port=9000
+;xdebug.start_with_request=yes
+;xdebug.idekey=PHPSTORM
+;xdebug.client_discovery_header = ''
