--- a/docker/8.3/php.ini
+++ b/docker/8.3/php.ini
@@ -3,6 +3,8 @@ post_max_size = 100M
 upload_max_filesize = 100M
 variables_order = EGPCS
 pcov.directory = .
+[Mongo]
+extension=mongodb.so
 [XDebug]
 ;zend_extension = xdebug.so
 ;xdebug.mode=debug
