--- a/.env.example
+++ b/.env.example
@@ -27,9 +27,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_DATABASE=curriculum-app
+DB_USERNAME=laravel
+DB_PASSWORD=admin
+DB_URI="mongodb+srv://rodrigoreynosowebdev:okVKt0CNE0C9vOPU@cluster0.lbgbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
