set testing database in .env.example

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ DB_DATABASE=laravel
 DB_USERNAME=sail
 DB_PASSWORD=password
 
+#Testing database
+DB_DATABASE=testing
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
