set up testing database fix

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,8 +31,8 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
           coverage: none
 
-#      - name: Start mysql service
-#        run: sudo /etc/init.d/mysql start
+      - name: Start mysql service
+        run: sudo /etc/init.d/mysql start
 
       - name: Run composer install
         run: composer install -n --prefer-dist
