--- a/.env.ci
+++ b/.env.ci
@@ -22,10 +22,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=curriculum-app
+#DB_DATABASE=curriculum-app
 
 #Testing database
-#DB_DATABASE=testing
+DB_DATABASE=testing
 
 #DB_USERNAME=root
 DB_USERNAME=laravel
