--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       BROADCAST_DRIVER: log
     services:
       mysql:
-        image: 'mysql/mysql-server:8.0'
+        image: mysql:latest
         env:
           MYSQL_ROOT_PASSWORD: 'admin'
           MYSQL_DATABASE: 'testing'
