--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Prepare the application
         run: |
-          php -r "file_exists('.env.ci') || copy('.env.ci', '.env');"
+          php -r "file_exists('.env.cli') || copy('.env.cli', '.env');"
           php artisan key:generate
 
       - name: Clear Config
