Revert "comment out"
This reverts commit 7d7750d6f785b5f5f84a6a42663c385f5b0ffc76.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -49,8 +49,8 @@ jobs:
 
       # Local MySQL service in GitHub hosted environments is disabled by default.
       # If you are using it instead of service containers, make sure you start it.
-#      - name: Start mysql service
-#        run: sudo systemctl start mysql.service
+      - name: Start mysql service
+        run: sudo systemctl start mysql.service
 
       - name: Get composer cache directory
         id: composer-cache
