fix: *Check https://medium.com/@michaelgichamu/configuring-mysql-for-github-actions-a-step-by-step-guide-f49e0a7aeedc

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Start MySQL
         run: |
             sudo /etc/init.d/mysql start
-            mysql -e "CREATE DATABASE IF NOT EXISTS $DB_DATABASE;" -u $DB_USER -p $DB_PASSWORD
+            mysql -e "CREATE DATABASE IF NOT EXISTS $DB_DATABASE;" -u$DB_USERNAME -p$DB_PASSWORD
 
       - name: Run composer install
         run: composer install -n --prefer-dist
