fix: *Check https://medium.com/@michaelgichamu/configuring-mysql-for-github-actions-a-step-by-step-guide-f49e0a7aeedc

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DB_DATABASE: testing
-      DB_USERNAME: laravel
-      DB_PASSWORD: admin
+      DB_USERNAME: root
+      DB_PASSWORD: root
     strategy:
       fail-fast: false
       matrix:
