try .env.ci fix

--- a/.env.ci
+++ b/.env.ci
@@ -28,8 +28,8 @@ DB_PORT=3306
 DB_DATABASE=testing
 
 #DB_USERNAME=root
-DB_USERNAME=laravel
-DB_PASSWORD=admin
+DB_USERNAME=root
+DB_PASSWORD=root
 DB_URI="mongodb+srv://rodrigoreynosowebdev:okVKt0CNE0C9vOPU@cluster0.lbgbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 
