--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
             - sail
         depends_on:
             - mysql
+            - mongo
             - redis
             - meilisearch
             - mailpit
@@ -52,6 +53,29 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    mongo:
+        build: ./docker/mongo
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: '${MONGO_USER}'
+            MONGO_INITDB_ROOT_PASSWORD: '${MONGO_PASSWORD}'
+            MONGO_INITDB_DATABASE: curriculum_app
+        ports:
+            - '${MONGO_PORT:-27017}:3306'
+        networks:
+            - sail
+        volumes:
+            - type: volume
+              source: sail-mongo
+              target: /data/db
+    mongo-express:
+        image: mongo-express
+        ports:
+            - 8081:8081
+        environment:
+            ME_CONFIG_MONGODB_ADMINUSERNAME: '${MONGO_USER}'
+            ME_CONFIG_MONGODB_ADMINPASSWORD: '${MONGO_PASSWORD}'
+            ME_CONFIG_MONGODB_URL: '${MONGO_URI}'
+            ME_CONFIG_BASICAUTH: false
     redis:
         image: 'redis:alpine'
         ports:
@@ -111,3 +135,4 @@ volumes:
         driver: local
     sail-meilisearch:
         driver: local
+    sail-mongo:
