--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: '${MONGO_PASSWORD}'
             MONGO_INITDB_DATABASE: curriculum_app
         ports:
-            - '${MONGO_PORT:-27017}:3306'
+            - '${MONGO_PORT:-27017}:27017'
         networks:
             - sail
         volumes:
@@ -71,6 +71,10 @@ services:
         image: mongo-express
         ports:
             - 8081:8081
+        networks:
+            - sail
+        depends_on:
+            -   mongo
         environment:
             ME_CONFIG_MONGODB_ADMINUSERNAME: '${MONGO_USER}'
             ME_CONFIG_MONGODB_ADMINPASSWORD: '${MONGO_PASSWORD}'
