--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,14 +13,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: [ '8.3' ]
+        php-version: [ '8.3' ]
+        mongodb-version: [ '8.0.3' ]
     steps:
       - uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version:  ${{ matrix.php-versions }}
+          php-version:  ${{ matrix.php-version }}
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, fileinfo, mysql
           coverage: xdebug
 
@@ -41,6 +42,14 @@ jobs:
         run: php artisan migrate -v
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.11.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-username: root
+          mongodb-password: example
+          mongodb-db: testing
 
       - name: Run tests
         run: php artisan test
