set mongo .env variables

--- a/.env.ci
+++ b/.env.ci
@@ -30,7 +30,16 @@ DB_DATABASE=testing
 #DB_USERNAME=root
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_URI="mongodb+srv://rodrigoreynosowebdev:okVKt0CNE0C9vOPU@cluster0.lbgbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+#MongoDb Atlas
+#MONGO_URI="mongodb+srv://rodrigoreynosowebdev:okVKt0CNE0C9vOPU@cluster0.lbgbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+MONGO_DB=testing
+MONGO_USER=root
+MONGO_PASSWORD=example
+MONGO_PORT=27017
+MONGO_HOST=mongo
+
 
 
 
