Revert "ignore submodule"
This reverts commit f99c5009393c94239c23d4150449d99f8c99799e.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "curriculum-app-front"]
 	path = curriculum-app-front
 	url = https://github.com/rodrigo1990/curriculum-app-front
-	ignore = all
+	ignore = dirty
