--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,7 @@ yarn-error.log
 /.idea
 /.vscode
 /.zed
+/curriculum-app-front
+/curriculum-app-front
 /curriculum-app-front/*
 /curriculum-app-front/
